namespace Goose2Client
{
    public static class Constants
    {
        public const string Walking = "Walking";
        public const string Direction = "Direction";
        public const string BodyState = "Body State";
        public const string Equipped = "Equipped";
        public const string Cast = "DoCast";
        public const string Attack = "DoAttack";

        public const string NamesLayer = "Names";
        public const string HealthBarsLayer = "HealthBars";
        public const string TooltipsLayer = "Tooltips";
    }
}